--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+<!--    TODO: Change artifact Id-->
     <groupId>com.leon</groupId>
     <artifactId>quick-start</artifactId>
     <version>0.1.0</version>
