--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 # TODO change service port number
 server.port=20099
 server.hostname=localhost
+
+logging.level.org.springframework=OFF
+spring.main.banner-mode=off
